--- a/k8s/all.yaml
+++ b/k8s/all.yaml
@@ -27,7 +27,7 @@ metadata:
   labels:
     component: klusterfuck
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     app: klusterfuck
     component: klusterfuck
@@ -65,15 +65,17 @@ spec:
             value: "admin1234"
           - name: AGENT_IMAGE
             value: "nipun/klusterfuck-agent:0.1.3"
+          - name: FLOW_IMAGE
+            value: "nipun/klusterfuck-flow:0.1.3"
         ports:
           - containerPort: 8080
         resources:
           limits:
-            cpu: 200m
-            memory: 250Mi
+            cpu: 400m
+            memory: 330Mi
           requests:
-            cpu: 200m
-            memory: 250Mi
+            cpu: 400m
+            memory: 300Mi
 ---
 apiVersion: v1
 kind: ReplicationController
@@ -96,7 +98,7 @@ spec:
       containers:
       - name: gogs
         image: fabric8/gogs
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
             path: /
