--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,15 @@
 
     <groupId>com.github.nk.klusterfuck</groupId>
     <artifactId>klusterfuck</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <scm>
+        <connection>scm:git:git@github.com:n-k/klusterfuck.git</connection>
+        <url>scm:git:git@github.com:n-k/klusterfuck.git</url>
+        <developerConnection>scm:git:git@github.com:n-k/klusterfuck.git</developerConnection>
+    </scm>
+
     <modules>
         <module>admin</module>
         <module>agent</module>
@@ -92,6 +99,11 @@
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.17.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
             </plugin>
         </plugins>
     </build>
