--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
     <groupId>com.github.nk.klusterfuck</groupId>
     <artifactId>klusterfuck</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>pom</packaging>
 
     <scm>
         <connection>scm:git:git@github.com:n-k/klusterfuck.git</connection>
         <url>scm:git:git@github.com:n-k/klusterfuck.git</url>
         <developerConnection>scm:git:git@github.com:n-k/klusterfuck.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>klusterfuck-0.2</tag>
   </scm>
 
     <modules>
