--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.nk.klusterfuck</groupId>
     <artifactId>klusterfuck</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.2.1</version>
     <packaging>pom</packaging>
 
     <scm>
         <connection>scm:git:git@github.com:n-k/klusterfuck.git</connection>
         <url>scm:git:git@github.com:n-k/klusterfuck.git</url>
         <developerConnection>scm:git:git@github.com:n-k/klusterfuck.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <modules>
         <module>admin</module>
@@ -26,7 +27,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
-        <image.version>0.1.3</image.version>
+        <image.version>${project.version}</image.version>
     </properties>
 
     <repositories>
