--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
-        <image.version>0.1.3</image.version>
+        <image.version>${project.version}</image.version>
     </properties>
 
     <repositories>
