--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -20,12 +20,14 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.0.12.Final</version>
         </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
@@ -54,15 +56,15 @@
         </dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.6.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.github.n-k</groupId>
             <artifactId>java-gogs-client</artifactId>
             <version>3ae19fa</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
@@ -75,16 +77,25 @@
             <version>4.3.6</version>
         </dependency>
 
-        <!-- test deps -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
         </dependency>
         <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
-            <scope>test</scope>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.11</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.11</version>
         </dependency>
     </dependencies>
 
@@ -105,132 +116,6 @@
             </resource>
         </resources>
         <plugins>
-            <plugin>
-                <groupId>com.github.kongchen</groupId>
-                <artifactId>swagger-maven-plugin</artifactId>
-                <version>3.1.3</version>
-                <executions>
-                    <execution>
-                        <id>1-gen-swagger</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <apiSources>
-                                <apiSource>
-                                    <springmvc>true</springmvc>
-                                    <locations>com.github.nk.klusterfuck.admin.controllers</locations>
-                                    <schemes>http</schemes>
-                                    <basePath>/</basePath>
-                                    <info>
-                                        <title>API</title>
-                                        <version>v1</version>
-                                        <description>API</description>
-                                    </info>
-                                    <swaggerDirectory>${swagger.output.dir}</swaggerDirectory>
-                                </apiSource>
-                            </apiSources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>2-gen-swagger</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <apiSources>
-                                <apiSource>
-                                    <springmvc>true</springmvc>
-                                    <locations>com.github.nk.klusterfuck.admin.controllers</locations>
-                                    <schemes>http</schemes>
-                                    <basePath>/</basePath>
-                                    <info>
-                                        <title>API</title>
-                                        <version>v1</version>
-                                        <description>API</description>
-                                    </info>
-                                    <swaggerDirectory>${project.basedir}/../client/src/main/resources</swaggerDirectory>
-                                </apiSource>
-                            </apiSources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-codegen-maven-plugin</artifactId>
-                <version>2.2.2</version>
-                <executions>
-                    <execution>
-                        <id>2-gen-ts-client</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${swagger.output.dir}/swagger.json</inputSpec>
-                            <language>typescript-angular2</language>
-                            <output>src/main/ui/src/client</output>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.4</version>
-                <configuration>
-                    <workingDirectory>src/main/ui</workingDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install node and yarn</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>install-node-and-yarn</goal>
-                        </goals>
-                        <configuration>
-                            <nodeVersion>v6.9.4</nodeVersion>
-                            <yarnVersion>v0.22.0</yarnVersion>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>install node and npm</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                        <configuration>
-                            <nodeVersion>v7.5.0</nodeVersion>
-                            <npmVersion>3.10.10</npmVersion>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>yarn install</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>yarn</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>npm run build</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-
-                        <configuration>
-                            <arguments>run build:prod</arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
@@ -337,4 +222,139 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>gen-client</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.kongchen</groupId>
+                        <artifactId>swagger-maven-plugin</artifactId>
+                        <version>3.1.3</version>
+                        <executions>
+                            <execution>
+                                <id>1-gen-swagger</id>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <apiSources>
+                                        <apiSource>
+                                            <springmvc>true</springmvc>
+                                            <locations>com.github.nk.klusterfuck.admin.controllers</locations>
+                                            <schemes>http</schemes>
+                                            <basePath>/</basePath>
+                                            <info>
+                                                <title>API</title>
+                                                <version>v1</version>
+                                                <description>API</description>
+                                            </info>
+                                            <swaggerDirectory>${swagger.output.dir}</swaggerDirectory>
+                                        </apiSource>
+                                    </apiSources>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>2-gen-swagger</id>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <apiSources>
+                                        <apiSource>
+                                            <springmvc>true</springmvc>
+                                            <locations>com.github.nk.klusterfuck.admin.controllers</locations>
+                                            <schemes>http</schemes>
+                                            <basePath>/</basePath>
+                                            <info>
+                                                <title>API</title>
+                                                <version>v1</version>
+                                                <description>API</description>
+                                            </info>
+                                            <swaggerDirectory>${project.basedir}/../client/src/main/resources</swaggerDirectory>
+                                        </apiSource>
+                                    </apiSources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>io.swagger</groupId>
+                        <artifactId>swagger-codegen-maven-plugin</artifactId>
+                        <version>2.2.2</version>
+                        <executions>
+                            <execution>
+                                <id>2-gen-ts-client</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <inputSpec>${swagger.output.dir}/swagger.json</inputSpec>
+                                    <language>typescript-angular2</language>
+                                    <output>src/main/ui/src/client</output>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.github.eirslett</groupId>
+                        <artifactId>frontend-maven-plugin</artifactId>
+                        <version>1.4</version>
+                        <configuration>
+                            <workingDirectory>src/main/ui</workingDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>install node and yarn</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>install-node-and-yarn</goal>
+                                </goals>
+                                <configuration>
+                                    <nodeVersion>v6.9.4</nodeVersion>
+                                    <yarnVersion>v0.22.0</yarnVersion>
+                                </configuration>
+                            </execution>
+
+                            <execution>
+                                <id>install node and npm</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>install-node-and-npm</goal>
+                                </goals>
+                                <configuration>
+                                    <nodeVersion>v7.5.0</nodeVersion>
+                                    <npmVersion>3.10.10</npmVersion>
+                                </configuration>
+                            </execution>
+
+                            <execution>
+                                <id>yarn install</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>yarn</goal>
+                                </goals>
+                                <configuration>
+                                    <arguments>install</arguments>
+                                </configuration>
+                            </execution>
+
+                            <execution>
+                                <id>npm run build</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>npm</goal>
+                                </goals>
+
+                                <configuration>
+                                    <arguments>run build:prod</arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
